# ndcli

./: .gitignore  README.md  go.mod  go.sum  main.go  pyproject.toml
api/: api.go  models.go  root.go  typing.go
cmd/: login.go  paginator.go  root.go  show.go
config/: root.go
ndcli/: __init__.py  __main__.py  config.py
ndcli/api/: __init__.py  navidrome.py  subsonic.py  typing.py
ndcli/commands/: __init__.py  auth.py  list.py  show.py
ndcli/commands/utils/: sections.py  show.py
ndcli/utils/: normalize.py  paging.py
